<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/amaanama"
    android:layout_height="match_parent"
    tools:context=".TasseMariee">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="206dp"
            android:layout_height="47dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="109dp"
            android:fontFamily="cursive"
            android:text="@string/details_du_produit"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:textStyle="bold" />
    </RelativeLayout>



    <ImageView
        android:id="@+id/back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/big_image"
        android:layout_width="387dp"
        android:layout_height="518dp"
        android:layout_marginTop="24dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back2"
        app:srcCompat="@drawable/produit5"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="cursive"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/big_image" />

    <TextView
        android:id="@+id/prodDesc"
        android:layout_width="178dp"
        android:layout_height="63dp"
        android:layout_marginTop="432dp"
        android:layout_marginEnd="180dp"
        android:fontFamily="cursive"
        android:text="@string/_45_0dt"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonpopup44"
        android:layout_width="197dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/buy_now_bg"
        android:fontFamily="cursive"
        android:text="@string/contactez_le_vendeur"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="89dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        app:circularflow_angles="20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prodPrice"
        app:layout_constraintVertical_bias="0.391"
        app:srcCompat="@drawable/shoppnow" />

    <TextView
        android:id="@+id/prodPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="cursive"
        android:text="@string/text5"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="@+id/prodDesc"
        app:layout_constraintTop_toBottomOf="@+id/prodDesc" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="51dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/baliz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button

        android:id="@+id/arjaa"
        android:layout_width="122dp"
        android:layout_height="51dp"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="8dp"
        android:background="@color/Transp"
        android:fontFamily="cursive"
        android:text="Retour"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>