<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77B5FE"
    tools:context=".huilenigelle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">




        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="105dp"
            android:layout_marginBottom="9dp"
            android:fontFamily="cursive"
            android:text="@string/details_du_produit"
            android:textColor="@color/white"
            android:textSize="28sp" />
    </RelativeLayout>



    <ImageView
        android:id="@+id/back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp"
        android:contentDescription="@string/todo" />

    <ImageView
        app:circularflow_angles="70"
        app:layout_constraintCircleAngle="20"
        app:layout_constraintCircleRadius="50dp"
        android:id="@+id/big_image"
        android:layout_width="340dp"
        android:layout_height="340dp"
        android:layout_marginTop="64dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back2"
        app:srcCompat="@drawable/product2"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="cursive"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/big_image" />

    <TextView
        android:id="@+id/prodDesc"
        android:layout_width="145dp"
        android:layout_height="49dp"
        android:layout_marginEnd="272dp"
        android:fontFamily="cursive"
        android:text="@string/_12_0dt"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/productName"
        app:layout_constraintTop_toBottomOf="@+id/big_image" />

    <Button
        android:id="@+id/buttonpopup3"
        android:layout_width="185dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/buy_now_bg"
        android:fontFamily="cursive"
        android:text="@string/contactez_le_vendeur"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="89dp"
        android:layout_height="61dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        app:circularflow_angles="20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prodPrice"
        app:layout_constraintVertical_bias="0.542"
        app:srcCompat="@drawable/shoppnow" />

    <TextView
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/prodPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="cursive"
        android:text="@string/text1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="@+id/prodDesc"
        app:layout_constraintTop_toBottomOf="@+id/prodDesc" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="51dp"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/baliz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button

        android:id="@+id/arjaa"
        android:layout_width="122dp"
        android:layout_height="51dp"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="4dp"
        android:background="@color/Transp"
        android:fontFamily="cursive"
        android:text="Retour"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>